2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-value): Revert previous patch.

	* nnimap.el (nnimap-credentials): Allow inhibiting the password query
	on failure.
	(nnimap-open-connection): Look up both virtual and physical server name
	credentials.

	* gnus-win.el: Revert previous patch, since it made Gnus backtrace.

2009-02-07  Dave Love  <fx@gnu.org>

	* tls.el (open-tls-stream): Don't query killing process.

2009-02-08  Dave Love  <fx@gnu.org>

	* gnus-win.el (gnus-window-to-buffer-helper,
	gnus-all-windows-visible-p): Function needn't be a symbol.

	* mail-source.el (mail-source-value): Function needn't be a symbol.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-cite-prefix-regexp): Remove } from the cite
	prefix.

	* gnus-art.el (gnus-treatment-function-alist): Do picons before
	highlight again, so that the highlight is correct.

	* gnus-picon.el (gnus-picon): Remove again.
	(gnus-picon-create-glyph): Set the background XPM colour explicitly.

	* gnus-art.el (gnus-treatment-function-alist): Insert picons after
	doing the header highlightling, so that the background colour of the
	picon is correct.

	* gnus-picon.el (gnus-picon-xbm): Removed obsolete face.
	(gnus-picon): Ditto.
	(gnus-picon): Reinstate.  The background colour for picons is white.
	(gnus-picon-insert-glyph): Make the background white.

	* nnml.el (nnml-open-nov): Don't return dead buffers.

	* auth-source.el (auth-source-create): Query the user for whether to
	store the credentials.

	* netrc.el (netrc-store-data): New function.

	* auth-source.el (auth-source-user-or-password): Use the existing auth
	sources, if any, for creation.

	* gnus.el (gnus-group-fast-parameter): Return the last matching
	parameter instead of the first matching parameter.

2010-09-26  Julien Danjou  <julien@danjou.info>

	* gnus-sum.el (gnus-auto-center-group): Transform into a defcustom.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
