@@ -1,5 +1,8 @@
 2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-picon.el (gnus-picon-inhibit-top-level-domains): New variable.
+	(gnus-picon-transform-address): Use it.
+
 	* mail-source.el (mail-source-value): Revert previous patch.
 
 	* nnimap.el (nnimap-credentials): Allow inhibiting the password query
